--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,10 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #120348;
+  /*
   min-height: 100vh;
+  */
   display: flex;
   flex-direction: column;
   align-items: center;
