--- a/src/Components/Stationary/Navigation/Navigation.css
+++ b/src/Components/Stationary/Navigation/Navigation.css
@@ -1,3 +1,7 @@
+/*
+* Navbar
+*/
+
 #navbar {
     background-color: #560BAD;
     display: flex;
@@ -10,25 +14,73 @@
     width: 1440px;
     height: 64px;
     
-  }
+}
   
-  .navbarButton {
+.navbarButton {
     background: none;
     color: white;
     border: 0px;
     border-left: 1px solid white;
     font-size: 20px;
-  
+
     width: 299px;
     height: 64px;
-  }
+}
 
-  .navbarButtonRight {
+.navbarButtonRight {
     border-right: 1px solid white;
-  }
-  
-  .navbarButton:hover {
+}
+
+.navbarButton:hover {
     color: #FF6DB0;
-  }
+}
+
+
+/*
+* Headline
+*/
+
+.headline {
+    position: relative;
+    text-align: center;
+    margin: 0px;
+
+    height: 92px;
+}
+
+.headline p {
+    position: absolute;
+    margin: 0px;
+    padding-left: 113px;
+    padding-right: 113px;
+    padding-top: 14px;
+    padding-bottom: 10px;
+    color: white;
+    line-height: 47px;
+    font-size: 36px;
+
+    left: 0px;
+    top: 0px;
+}
+
+.headlineOL {
+    position: absolute;
+    border-top: 4px solid #EEC8ED;
+    border-left: 4px solid #EEC8ED;
+
+    width: 106px;
+    height: 36px;
+}
+
+.headlineUR {
+    position: absolute;
+    border-bottom: 4px solid #EEC8ED;
+    border-right: 4px solid #EEC8ED;
+
+    bottom: 0px;
+    right: 0px;
+    width: 143px;
+    height: 16px;
+}
   
  
