--- a/src/Components/Stationary/Navigation/Navigation.css
+++ b/src/Components/Stationary/Navigation/Navigation.css
@@ -130,7 +130,28 @@
     text-decoration: none;
 }
 
+/*
+*NavIconGroup
+*/  
+.navIconGroup {
+    display: flex;
+}
 
+.navIconGroupItem {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 0px 10px;
+}
 
-  
- 
+.navIconGroupItem img {
+    width: 40px;
+    height: 40px;
+}
+
+.navIconGroupItem p {
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bolder;
+    font-size: 12px;
+}
