--- a/src/Components/Stationary/Navigation/NavIconGroup.css
+++ b/src/Components/Stationary/Navigation/NavIconGroup.css
@@ -4,7 +4,20 @@
 .navIconGroup {
     display: flex;
     justify-content: space-between;
+    background-image: url("./assets/image esport.png");
+    background-repeat: no-repeat;
+    background-size: 1920px;
+    height: 448px;
+}
+
+.navIconGroup a {
     margin-top: 16px;
+    margin-left: 26px;
+}
+
+.icons {
+    margin-top: 16px;
+    margin-right: 13px;
 }
 
 .navIconGroup div {
@@ -15,7 +28,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 0px 10px;
+    padding: 0px 13px;
 }
 
 .navIconGroupItem img {
