--- a/src/Components/Stationary/Navigation/NavIconGroup.css
+++ b/src/Components/Stationary/Navigation/NavIconGroup.css
@@ -4,9 +4,9 @@
 .navIconGroup {
     display: flex;
     justify-content: space-between;
-    background-image: url("./assets/image esport.png");
+    background-image: url("./assets/pubg.jpg");
     background-repeat: no-repeat;
-    background-size: 1920px;
+    background-size: 100%;
     height: 448px;
 }
 
