--- a/src/Components/Stationary/Eventcards/Eventcard.css
+++ b/src/Components/Stationary/Eventcards/Eventcard.css
@@ -39,15 +39,14 @@
     height: 30px;
     left: 176px;
     top: 10px;
-    background-size: cover;
     background-color: transparent;
     border: none;
   }
 
   .event-card__image button .button-icon {
-    width: 25px;
+    width: 23px;
     height: 22px;
-    background-size: cover;
+    background-size: contain;
     background-image: url("./assets/favorites-empty.svg");
   }
   
@@ -82,22 +81,6 @@
     color: #FFFFFF;
   }
   
-  .eventtitle-box .bewertung{
-    width: 48px;
-    height: 24px;
-    background-color: green;
-    border-radius: 5px;
-  }
-  
-  .eventtitle-box .bewertung p{
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 24px;
-    text-align: center;
-    color: #000000;
-  }
   .genres {
     display: flex;
     flex-direction: row;
