--- a/src/Components/Stationary/Navigation/NavIconGroup.css
+++ b/src/Components/Stationary/Navigation/NavIconGroup.css
@@ -10,7 +10,7 @@
     height: 448px;
 }
 
-.navIconGroup a {
+.logo {
     margin-top: 16px;
     margin-left: 26px;
 }
@@ -34,6 +34,13 @@
 .navIconGroupItem img {
     width: 40px;
     height: 40px;
+}
+
+.navIconGroupItem a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
 }
 
 .navIconGroupItem p {
