--- a/src/Components/Stationary/Eventcards/Eventcard.css
+++ b/src/Components/Stationary/Eventcards/Eventcard.css
@@ -7,6 +7,7 @@
   .event-card{
     display: flex;
     flex-direction: column;
+    margin-right: 30px;
     align-items: center;
     position: relative;
     width: 216px;
