--- a/src/Components/Stationary/Pages/Pages.css
+++ b/src/Components/Stationary/Pages/Pages.css
@@ -1,3 +1,21 @@
 .container{
     color: white;
 }
+
+.eventgruppe {
+    margin-top: 40px;
+}
+
+.eventcards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    margin-left: 160px;
+    margin-right: 130px;
+    margin-top: 32px;
+}
+
+.eventcards:last-child {
+    margin-right: 0;
+}
