NavIconGroup: Hintergrundbild als Props hinzugefügt. Kann nun bei jeder Seite einzeln angezeigt werden

--- a/src/Components/Stationary/Navigation/NavIconGroup.css
+++ b/src/Components/Stationary/Navigation/NavIconGroup.css
@@ -4,6 +4,9 @@
 .navIconGroup {
     display: flex;
     justify-content: space-between;
+}
+
+.background {
     background-image: url("./assets/pubg.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
