--- a/src/Components/Stationary/Kasse/ZurKasse.css
+++ b/src/Components/Stationary/Kasse/ZurKasse.css
@@ -1,5 +1,10 @@
 .bezahlungsfeld {
-    margin-left: 20px;
+    margin-right: 160px;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 10px;
+    border: 4px solid var(--terBGDetail);
+    float: right;
 }
 
 .kassefeld {
@@ -11,12 +16,10 @@
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     border-bottom: 1px solid var(--secWhite);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding: 5px;
 }
 
-.zurkasse {
+.zurkasse button {
     background-color: var(--primePink);
     color: var(--secWhite);
     width: 340px;
@@ -24,6 +27,7 @@
     border: none;
     border-radius: 5px;
     font-size: 16px;
+    align-items: center;
 }
 
 .zahlungsarten {
@@ -41,12 +45,68 @@
     border-bottom-right-radius: 5px;
 }
 
-img {
+.zahlungsarten img {
     margin-bottom: 10px;
     border: 0;
     border-radius: 5px;
 }
 
+.kassefeld_text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.gesamt_preis {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.gesamt_inkl {
+    display: flex;
+}
+
 .gesamt {
-    align-items: flex-start;
+    font-family: 'Roboto', monospace;
+    font-weight: bold;
+    margin-right: 5px;
+    font-size: 16px;
+}
+
+.inkl {
+    font-size: 14px;
+}
+
+.versand {
+    display: flex;
+}
+
+.versand p{
+    font-size: 14px;
+}
+
+.zurkasse {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 6px;
+    margin-bottom: 13px;
+}
+
+.versand_preis {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.preis {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-family: 'Roboto', monospace;
+    font-weight: bolder;
+    font-size: 20px;
 }
