--- a/src/Components/Stationary/Eventcards/Eventcard.css
+++ b/src/Components/Stationary/Eventcards/Eventcard.css
@@ -140,7 +140,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 10px 15px;
-    gap: 7px;
+    gap: 12px;
     width: auto;
     height: auto;
   }
@@ -149,11 +149,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    align-content: center;
     padding: 0px;
     gap: 10px;
     width: auto;
     height: auto;
+  }
+  .event-information .card-location{
+    align-items: normal;
   }
 
   .event-information .card-price img {
