--- a/src/Components/Stationary/Navigation/EventcardContainer.css
+++ b/src/Components/Stationary/Navigation/EventcardContainer.css
@@ -6,9 +6,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    row-gap: 32px;
 
     margin-left: 160px;
-    margin-right: 130px;
     margin-top: 32px;
 }
 
