--- a/src/Components/Stationary/Navigation/Headline.css
+++ b/src/Components/Stationary/Navigation/Headline.css
@@ -3,17 +3,25 @@
 */
 
 .headline {
-    position: relative;
-    text-align: center;
-    margin-left: 160px;
-    margin-bottom: 28px;
-
     height: 71px;
+    width: fit-content;
+    position: relative;
+}
+
+.headlineBufferUpper {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: -21px;
+}
+
+.headlineBufferLower {
+    display: flex;
+    flex-direction: row;
+    margin-top: -6px;
 }
 
 .headline p {
-    position: absolute;
-    margin: 0px;
+    display: inline;
     padding-left: 113px;
     padding-right: 113px;
     padding-top: 14px;
@@ -23,13 +31,9 @@
     font-size: 36px;
     font-family: 'JetBrains Mono', monospace;
     font-weight: bolder;
-
-    left: 0px;
-    top: 0px;
 }
 
 .headlineOL {
-    position: absolute;
     border-top: 4px solid var(--secRose);
     border-left: 4px solid var(--secRose);
 
@@ -37,13 +41,14 @@
     height: 36px;
 }
 
+.headlineBuffer {
+    flex: 1;
+}
+
 .headlineUR {
-    position: absolute;
     border-bottom: 4px solid var(--secRose);
     border-right: 4px solid var(--secRose);
 
-    bottom: 0px;
-    right: 0px;
     width: 143px;
     height: 16px;
 }
