--- a/src/Components/Stationary/Kasse/ZurKasse.css
+++ b/src/Components/Stationary/Kasse/ZurKasse.css
@@ -21,13 +21,17 @@
 
 .zurkasse button {
     background-color: var(--primePink);
-    color: var(--secWhite);
     width: 340px;
     height: 48px;
     border: none;
     border-radius: 5px;
-    font-size: 16px;
     align-items: center;
+}
+
+.zurkasse a {
+    text-decoration: none;
+    color: var(--secWhite);
+    font-size: 16px;
 }
 
 .zahlungsarten {
