Added Top Länder, content centered

--- a/src/Components/Stationary/Eventcards/EventcardContainer.css
+++ b/src/Components/Stationary/Eventcards/EventcardContainer.css
@@ -1,6 +1,14 @@
+.eventgruppe {
+    display: flex;
+    flex-direction: column;
+}
+
 .eventcards {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     row-gap: 32px;
+    column-gap: 32px;
+
+    margin-top: 32px;
 }
