--- a/src/Components/Stationary/Bewertung/SterneBewertung.css
+++ b/src/Components/Stationary/Bewertung/SterneBewertung.css
@@ -5,3 +5,54 @@
 .stern {
     cursor: pointer;
 }
+
+/*CSS für Bewertung*/
+.bewertung_sterne {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 460px;
+    height: 312px;
+    border: 1px solid var(--secWhite);
+    border-radius: 5px;
+    color: var(--secWhite);
+    font-family: 'Roboto', monospace;
+    font-size: 16px;
+}
+
+.bewertung_text_1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.bewertung_text_2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.bewertung_text_3 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.bewertung_text_4 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.bewertung_text_5 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
