--- a/src/Components/Stationary/Pages/CheckOutProzess/CheckOut.css
+++ b/src/Components/Stationary/Pages/CheckOutProzess/CheckOut.css
@@ -146,6 +146,7 @@
     width: 272px;
     height: 42px;
     padding: 12px;
+    border: none;
     border-radius: 5px;
     margin-top: 48px;
     margin-left: 130px;
@@ -190,6 +191,7 @@
     width: 272px;
     height: 42px;
     padding: 12px;
+    border: none;
     border-radius: 5px;
     margin-right: 10px;
     margin-left: 10px;
@@ -246,6 +248,7 @@
     width: 272px;
     height: 42px;
     padding: 12px;
+    border: none;
     border-radius: 5px;
     margin-top: 48px;
     margin-left: 130px;
