--- a/src/Components/Stationary/Bewertung/SterneBewertung.css
+++ b/src/Components/Stationary/Bewertung/SterneBewertung.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     gap: 10px;
     width: 460px;
     height: 312px;
@@ -20,39 +20,35 @@
     color: var(--secWhite);
     font-family: 'Roboto', monospace;
     font-size: 16px;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
-.bewertung_text_1 {
+.bewertung_sterne > div{
+    
     display: flex;
     flex-direction: row;
-    align-items: center;
+    width: auto;
     gap: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
-.bewertung_text_2 {
-    display: flex;
-    flex-direction: row;
+.bewertung_sterne .bewerten_button{
+    justify-content: center;
     align-items: center;
-    gap: 10px;
-}
+    width: stretch;
+    min-height: 48px;
+    height: 48px;
+    
+    border-radius: 5px;
+    color: #FFFFFF;
+    background-color: #FF6DB0;;
+    border: none;
 
-.bewertung_text_3 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-}
-
-.bewertung_text_4 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-}
-
-.bewertung_text_5 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
+    font-family: 'Jetbrains Mono', sans-serif;
+    font-style: normal;
+    font-weight: 750;
+    font-size: 16px;
+    line-height: 21px;
 }
