--- a/src/Components/Stationary/Bewertung/SterneBewertung.css
+++ b/src/Components/Stationary/Bewertung/SterneBewertung.css
@@ -20,17 +20,17 @@
     color: var(--secWhite);
     font-family: 'Roboto', monospace;
     font-size: 16px;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 7%;
+    padding-right: 7%;
 }
 
 .bewertung_sterne > div{
     
     display: flex;
     flex-direction: row;
-    width: auto;
+    width: 400px;
     gap: 10px;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
 }
 
