--- a/src/Components/Stationary/Navigation/NavIconGroup.css
+++ b/src/Components/Stationary/Navigation/NavIconGroup.css
@@ -9,7 +9,8 @@
 .background {
     background-image: url("./assets/pubg.jpg");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
+    background-position: center;
     height: 448px;
 }
 
