Fixed Ticket CSS

--- a/src/Components/Stationary/Pages/Pages.css
+++ b/src/Components/Stationary/Pages/Pages.css
@@ -21,3 +21,9 @@
 .singlePageInnerContainer p {
     color: var(--secWhite);
 }
+
+.ticketContainer {
+    display: flex;
+    flex-direction: column;
+    row-gap: 32px;
+}
