--- a/src/Components/Stationary/Ticket/Ticket.css
+++ b/src/Components/Stationary/Ticket/Ticket.css
@@ -58,7 +58,7 @@
 }
 
 .preis_ticket {
-    font-size: 28px;
+    font-size: 24px;
     font-family: 'Roboto', monospace;
     text-decoration: none;
 }
@@ -77,12 +77,12 @@
     gap: 12px;
     font-family: 'Roboto', monospace;
     color: var(--secWhite);
+    width: 370px;
 }
 
 .infos_alle {
     display: flex;
     flex-direction: row;
-    gap: 26px;
 }
 
 .infos_event {
@@ -90,6 +90,7 @@
     flex-direction: column;
     gap: 15px;
     font-size: 15px;
+    width: 205px;
 }
 
 .datum_event {
@@ -121,7 +122,7 @@
 }
 
 .ticket_beschreibung {
-    width: 572px;
+    width: 500px;
     height: 160px;
     font-size: 15px;
     font-family: 'Roboto', monospace;
@@ -129,7 +130,9 @@
 }
 
 .ticket_ueberschrift {
-    font-size: 24px;
+    font-size: 22px;
+    display: flex;
+    align-items: center;
 }
 
 .veranstalter_name {
@@ -161,5 +164,18 @@
 .hardticket_anzeige label {
     font-size: 15px;
     cursor: pointer;
+}
+
+.preis_ticket_gesamt {
+    font-size: 30px;
+}
+
+.ticket_ueberschrift_Name {
+    width: 165px;
+}
+
+.ticket_ueberschrift_Minus {
+    width: 40px;
+    text-align: center;
 }
 
